.happypack/s--625576151
/Users/tmac_zc/Code/kr-admin/src/Components/Checkbox/index.js: Unexpected token (64:1)
SyntaxError: /Users/tmac_zc/Code/kr-admin/src/Components/Checkbox/index.js: Unexpected token (64:1)
[0m [90m 62 | [39m	render() {
 [90m 63 | [39m
[31m[1m>[22m[39m[90m 64 | [39m[33m<<[39m[33m<<[39m[33m<<[39m[33m<[39m [33mHEAD[39m
 [90m    | [39m [31m[1m^[22m[39m
 [90m 65 | [39m[33m===[39m[33m===[39m[33m=[39m
 [90m 66 | [39m
 [90m 67 | [39m		let {[0m
    at Parser.pp$5.raise (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp.unexpected (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1627:8)
    at Parser.pp$8.jsxParseIdentifier (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6193:10)
    at Parser.pp$8.jsxParseNamespacedName (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6204:19)
    at Parser.pp$8.jsxParseElementName (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6219:19)
    at Parser.pp$8.jsxParseOpeningElementAt (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6309:20)
    at Parser.pp$8.jsxParseElementAt (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6333:29)
    at Parser.pp$8.jsxParseElement (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6388:15)
    at Parser.parseExprAtom (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6400:21)
    at Parser.pp$3.parseExprSubscripts (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3331:19)
    at Parser.pp$3.parseMaybeUnary (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3311:19)
    at Parser.pp$3.parseExprOps (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3241:19)
    at Parser.pp$3.parseMaybeConditional (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3218:19)
    at Parser.pp$3.parseMaybeAssign (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3181:19)
    at Parser.parseMaybeAssign (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5655:24)
    at Parser.pp$3.parseExpression (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3143:19)
    at Parser.pp$1.parseStatement (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1774:19)
    at Parser.parseStatement (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5218:22)
    at Parser.pp$1.parseBlockBody (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2133:21)
    at Parser.pp$1.parseBlock (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2114:8)
    at Parser.pp$3.parseFunctionBody (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3998:22)
    at Parser.parseFunctionBody (/Users/tmac_zc/Code/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5205:20)